--- a/Parcial/Makefile
+++ b/Parcial/Makefile
@@ -3,25 +3,22 @@ CC= g++ -std=c++11
 #ZMQ_HDRS=$(ZMQ)/include
 #ZMQ_LIBS=$(ZMQ)/lib
 
-#all: worker client server
-all: client
+all: worker client server
 
-#worker: worker.cc
+worker: worker.cc
 	#$(CC) -I$(ZMQ_HDRS) -c worker.cc
 	#$(CC) -L$(ZMQ_LIBS) -o worker worker.o -lzmq -lczmq
-#	$(CC) worker.cc -o worker -lzmq -lczmq
-
-#client server
+	$(CC) worker.cc -o worker -lzmq -lczmq
 
 client: client.cc
 #	$(CC) -I$(ZMQ_HDRS) -c client.c
 #	$(CC) -L$(ZMQ_LIBS) -o client client.o -lzmq -lczmq
 	$(CC) client.cc -o client -lzmq -lczmq
 
-#server:  Broker.cc
+server:  Broker.cc
 #	$(CC) -I$(ZMQ_HDRS) -c server.c
 #	$(CC) -L$(ZMQ_LIBS) -o server server.o -lzmq -lczmq
-#	$(CC) Broker.cc -o server -lzmq -lczmq
+	$(CC) Broker.cc -o server -lzmq -lczmq
 
 clean:
 	rm -f client.o server.o worker.o client server worker *~
